# att-docs

./: .gitignore  API.md  ARCHITECTURE.md  BLOG.md  CHANGELOG.md  CONE_PROTOTYPE_SPEC-1.md  CONTRIBUTING.md  DATA.md  LICENSE  Makefile  README.md  RESEARCH.md  ROADMAP.md  pyproject.toml  research-roadmap-tda-llm.md
att/: __init__.py
blog/: post.md
configs/: batch_eeg.yaml  coupled_lorenz_sweep.yaml  eeg_bistable.yaml  kuramoto_sweep.yaml
demo/: README.md  app.py
docs/: conf.py  index.rst  make.bat  quickstart.rst
figures/: fig3_benchmark_data.csv
notebooks/: cone_prototype.ipynb  fig1_coupling_sweep.ipynb  fig2_baseline_comparison.ipynb  fig3_benchmark_overlay.ipynb  fig4_surrogate_null.ipynb  fig5_heterogeneous_timescales.ipynb  fig6_eeg_transitions.ipynb  fig7_real_eeg.ipynb  fig8_eeg_binding.ipynb  fig9_zscore_calibration.py  topo_sparsity_analysis.ipynb  tutorial_heterogeneous_timescales.ipynb  tutorial_lorenz_walkthrough.ipynb
paper/: preprint.tex  references.bib
scripts/: batch_eeg.py  benchmark_changepoint_methods.py  benchmark_rivalry_multisubject.py  benchmark_seizure_onset.py  compare_baseline_lindner.py  compile_tda_llm_results.py  complex_synthesis.py  cross_freq_binding_screen.py  download_eeg.py  evaluate_correctness.py  extract_attention_weights.py  extract_hidden_states.py  extract_hidden_states_aligned.py  extract_hidden_states_multimodel.py  generate_readme_figure.py  probe_battery_round2.py  probe_domain_sweep.py  reservoir_degradation_monitor.py  reservoir_regime_detection.py  run_attention_binding.py  run_compression_resistance.py  run_correctness_prediction.py  run_crocker.py  run_cross_model.py  run_intrinsic_dim.py  run_perlayer_zscore.py  run_spectral_ph.py  run_token_topology.py  run_topo_sparsity_baseline.py  run_topo_sparsity_lindner.py  run_zigzag.py  screen_financial_regimes.py  screen_preswitch_timing.py  screen_sleep_transitions.py  screen_snn_topology.py  screen_state_fingerprints.py  snn_probe_battery.py  snn_topology_deepen.py  synthesis_analysis.py
tests/: test_benchmarks.py  test_binding.py  test_cli.py  test_cone_synthetic.py  test_config.py  test_embedding.py  test_llm_attention_binding.py  test_llm_crocker.py  test_llm_features.py  test_llm_intrinsic_dim.py  test_llm_layerwise.py  test_llm_loader.py  test_llm_token_partition.py  test_llm_zigzag.py  test_neuro.py  test_spectral.py  (+6 more)
(+161 files in other folders)
